# Factory-Engine--Website

./: Cargo.toml  README.md
.github/workflows/: deploy-cloudflare.yml
install/: build.ps1  install-admin.ps1  install.ps1  run-build.bat
rules/: classification.toml
src/: cli.rs  lib.rs  main.rs
src/catalog/: columnar.rs  mft.rs  mod.rs  path_reconstruct.rs  persistence.rs  usn.rs  volume.rs  volume_stub.rs
src/classify/: corrections.rs  engine.rs  grouping.rs  mod.rs  rules.rs
src/components/: NeuralExplorer.tsx
src/dashboard/: mod.rs  tree.rs
src/gui/: app.rs  demo.rs  mod.rs
src/routes/: index.tsx
src/security/: mod.rs
tests/: integration.rs
web/: CLOUDFLARE-TOKEN.md  DEPLOY.md
web/scripts/: go-live.ps1
